case-3950 - Ding item viewer main item fix

--- a/css/ding_item_viewer.styles.css
+++ b/css/ding_item_viewer.styles.css
@@ -294,6 +294,7 @@
 .ding-item-viewer .browsebar-item.active .field-type-ting-cover {
   float: left;
   margin-right: 10px;
+  height: 100%;
 }
 
 .ding-item-viewer .browsebar-item.active .field-type-ting-author {
