case 3950 - IE9 cover image fix.

--- a/css/ding_item_viewer.styles.css
+++ b/css/ding_item_viewer.styles.css
@@ -297,6 +297,11 @@
   height: 100%;
 }
 
+.ding-item-viewer .browsebar-item.active .field-type-ting-cover img {
+  width: 160px;
+  height: auto;
+}
+
 .ding-item-viewer .browsebar-item.active .field-type-ting-author {
   color: #53514b;
   display: block;
